Fixed user message alignment issue

--- a/sirji/vscode-extension/src/views/chat/chat.css
+++ b/sirji/vscode-extension/src/views/chat/chat.css
@@ -76,7 +76,6 @@ html {
 .user-message {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
   align-self: end;
   width: fit-content;
   max-width: 80%;
